correction alignement picto activités des sorties en page d'accueil
git-svn-id: https://dev.camptocamp.org/svn/c2corg@764 5b3c568a-86f9-4a59-a47a-7be284f604b4

--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -1565,12 +1565,11 @@ ul.recent-changes .meta
   font-style:italic;
 }
 
-#last-outings li img
+#last-outings li
 {
-  float: right;
-  margin:2px;
-  margin-left: 4px;
+  min-height: 16px;
 }
+
 
 /* User language list selection */
 
